Insights Spacing issues on content

--- a/app/assets/styles/modules/_homePage.scss
+++ b/app/assets/styles/modules/_homePage.scss
@@ -940,9 +940,10 @@
 			  }
 		  }
 	  }
+	  
 	  .testimonials {	
 		position:relative;
-		top:120px;	  
+		margin-top:100px;	  
 		  .testimonials-background-image{
 			  width: 100%;
 			  position: absolute;
